--- a/pterodactylthemes.css
+++ b/pterodactylthemes.css
@@ -1,5 +1,5 @@
    html {
-  background-image: url("https://telegra.ph/ggghg-03-03");
+  background-image: url("https://ibb.co/Nrh4mGz");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center center;
@@ -154,7 +154,7 @@ div.TitledGreyBox___StyledDiv-sc-gvsoy-0.oLbNP.StartupContainer___StyledTitledGr
 }
 
 div.App___StyledDiv-sc-2l91w7-0.fnfeQw {
-  background-image: url("https://telegra.ph/ggghg-03-03");
+  background-image: url("https://ibb.co/Nrh4mGz");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center center;
